# gfv2-params

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
configs/: 01_OR_elev_param_config.yml  01_elev_param_config.yml  02_slope_param_config.yml  03_aspect_param_config.yml  04_soils_param_config.yml  05_soilmoistmax_param_config.yml  06_ssflux_param_config.yml  aspect_param.yml  base_config.yml  base_config_oregon.yml  base_config_vpu01.yml  carea_t156_frac_param.yml  carea_t8_frac_param.yml  compute_dem_derivatives.yml  config_merge_rpu_by_vpu.yml  config_slope_aspect.yml  depstor_carea_map_raster.yml  depstor_dprst_raster.yml  depstor_dprst_raster_vpu01.yml  depstor_drains_imperv_raster.yml  depstor_drains_perv_raster.yml  depstor_imperv_raster.yml  depstor_imperv_raster_vpu01.yml  depstor_landmask_raster.yml  depstor_params.yml  depstor_perv_raster.yml  depstor_rasters.yml  depstor_ratio_params.yml  depstor_routing_raster.yml  depstor_routing_raster_vpu01.yml  depstor_streambuffer_raster.yml  depstor_streambuffer_raster_vpu01.yml  depstor_waterbody_raster.yml  depstor_waterbody_raster_vpu01.yml  dprst_frac_param.yml  dprst_frac_param_vpu01.yml  drains_imperv_frac_param.yml  drains_perv_frac_param.yml  drains_to_dprst_frac_param.yml  drains_to_dprst_frac_param_vpu01.yml  (+21 more)
crosswalks/: foresce_nhm.csv  nalcms_nhm.csv  nhm_v11_nhm.csv  nlcd_nhm.csv
docs/: 0b_TB_depr_stor.py  ADDING_A_PARAMETER.md  ARCHITECTURE.md  NHM_description_Regan_2018_TM6B9.md  Runoff_sensitivity_snow_depletion_Sexstone_2020.md  Snow_Depletion_Curves.md  Surface_depression_storage_Driscoll_2020.md  api.md  conventions.md  depstor_classification_reference.md  depstor_port_summary.md  depstor_vpu01_validation_results.md  depstor_workflow.md  dprst_depth_avg_reference.md  dprst_depth_oregon_validation.md  dprst_depth_spike.md  getting-started.md  hpc-workflow.md  index.md  nhm_source_crosscheck_2026-07.md  python-patterns.md  pywatershed_depression_storage_requirements.md
gfv2_params.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
marimo/: check_and_plot_merged_rasters.py  experiment_merge_rpu_by_vpu.py  experiment_process_NHD_by_vpu.py  experiment_soilmoistmax.py  experiment_soils.py  merge_rpu_by_vpu.py
notebooks/: carea_threshold_sweep.py  check_and_plot_merged_rasters.py  check_border_dem.py  check_depstor_vpu01.ipynb  check_derived_rasters.ipynb  check_derived_rasters.py  check_lulc_veg_inputs.ipynb  check_params.ipynb  check_twi_merge.ipynb  check_twi_merge.py  check_vrts.ipynb  check_vrts.py  climate_forcing_comp.py  diff_twi_hydrodem_vs_merged.ipynb  diff_twi_hydrodem_vs_merged.py  experiment_process_NHD_by_vpu.py  inspect_fabric.py  merge_vpu_targets.py  qaqc_depstor_vpu01.ipynb
scripts/: 1_create_dem_params.py  4_create_soils_params.py  6_create_ssflux_params.py  7_add_nat_hru_id.py  8_add_nat_hru_id_default_nhru.py  build_border_dem.py  build_carea_twi_artifact.py  build_depstor_carea_map.py  build_depstor_dprst.py  build_depstor_imperv.py  build_depstor_intersect.py  build_depstor_landmask.py  build_depstor_perv.py  build_depstor_rasters.py  build_depstor_routing.py  build_depstor_streambuffer.py  build_depstor_waterbody.py  build_derived_rasters.py  build_lulc_rasters.py  build_shared_rasters.py  build_vpu_landmask.py  build_vrt.py  build_weights.py  clip_shared_to_fabric.py  compute_dem_derivatives.py  compute_slope_aspect.py  create_lulc_params.py  create_soils_params.py  create_ssflux_params.py  create_zonal_params.py  derive_aggregate.py  derive_depstor_params.py  derive_depstor_ratios.py  derive_snarea_curve.py  derive_snarea_library.py  derive_zonal_params.py  diagnose_drains_to_dprst.py  find_missing_hru_ids.py  init_data_root.py  merge_and_fill_params.py  (+16 more)
slurm_batch/: .gitignore  01_OR_create_elev_params.batch  01_create_elev_params copy.batch  01_create_elev_params.batch  01a_create_elev_params_update.batch  02_create_slope_params.batch  02a_create_slope_params_update.batch  03_create_aspect_params.batch  03a_create_aspect_params_update.batch  04_OR_create_soils_params.batch  04_create_soils_params.batch  04a_create_soils_params_update.batch  05_create_soilmoistmax_params.batch  05a_create_soilmoistmax_params_update.batch  06_OR_create_ssflux_params.batch  06_create_ssflux_params.batch  06a_create_ssflux_params_update.batch  07_merge_output_params.batch  08_merge_default_output_params.batch  HPC_REFERENCE.md  RUNME.md  a_process_NHD_by_vpu.batch  b_process_slope_aspect.batch  build_border_dem.batch  build_depstor_carea_map.batch  build_depstor_dprst.batch  build_depstor_dprst_vpu01.batch  build_depstor_drains_imperv.batch  build_depstor_drains_perv.batch  build_depstor_imperv.batch  build_depstor_imperv_vpu01.batch  build_depstor_landmask.batch  build_depstor_perv.batch  build_depstor_rasters.batch  build_depstor_routing.batch  build_depstor_routing_vpu01.batch  build_depstor_streambuffer.batch  build_depstor_streambuffer_vpu01.batch  build_depstor_waterbody.batch  build_depstor_waterbody_vpu01.batch  (+74 more)
src/: download_mrlc_fract_impervious_rasters.py  download_rpu_rasters.py  helpers.py
tests/: test_ab_drains_to_dprst.py  test_add_fabric.py  test_aggregate_adapter.py  test_aggregate_driver.py  test_aggregate_snodas.py  test_batching.py  test_build_border_dem.py  test_build_depstor_dprst.py  test_build_depstor_landmask.py  test_build_depstor_perv.py  test_build_lulc_rasters.py  test_build_vrt.py  test_build_vrt_srs.py  test_carea_map_threshold.py  test_clip_shared_to_fabric.py  test_cog.py  test_compute_breached_fdr.py  test_compute_carea_map_binary.py  test_compute_dem_derivatives.py  test_compute_slope_aspect.py  test_config.py  test_copernicus_dem.py  test_d8_routing_labeled.py  test_depstor_helpers.py  test_derive_aggregate.py  test_derive_depstor_ratios.py  test_derive_snarea_curve.py  test_diagnose_drains_to_dprst.py  test_download_nhd_flowlines.py  test_dprst_depth.py  test_dprst_depth_burn.py  test_dprst_depth_compute.py  test_dprst_depth_fill.py  test_dprst_depth_probe.py  test_dprst_depth_tiling.py  test_endorheic.py  (+45 more)
(+204 files in other folders)
