[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfv2-params"
version = "0.1.0"
description = "PRMS/NHM parameter generation from watershed fabric polygons"
requires-python = ">=3.12"
dependencies = [
    "gdptools>=0.3.13",
    "pandas",
    "numpy",
    "geopandas",
    "xarray",
    "rioxarray",
    "rasterstats",
    "spatialpandas",
    "pooch",
    "py7zr",
    "scikit-learn",
    "scipy",
    "pyyaml",
    "tqdm",
    "whitebox",
]

[project.optional-dependencies]
notebooks = [
    "marimo",
    "plotly",
    "matplotlib",
    "hvplot",
    "geoviews",
    "datashader",
    "dask",
    "distributed",
    "intake",
    "intake-xarray",
    "intake-parquet",
    "s3fs",
    "ipykernel",
]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gfv2_params"]

# ---------------------------------------------------------------------------
# Pixi — canonical environment management (issue #39).
# Conda channel for compute libraries with native binaries; pypi for
# pure-python packages and the editable install of this project. Run
# `pixi install` to materialise envs under `.pixi/envs/`.
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
gdal = "*"
rasterio = "*"
geopandas = "*"
pyproj = "*"
numba = "*"
llvmlite = "*"
richdem = "*"
exactextract = "*"
scipy = "*"
pandas = "*"
numpy = "*"
xarray = "*"
rioxarray = "*"
rasterstats = "*"
spatialpandas = "*"
pooch = "*"
py7zr = "*"
scikit-learn = "*"
pyyaml = "*"
tqdm = "*"
gdptools = ">=0.3.13"
whitebox = "*"

[tool.pixi.pypi-dependencies]
gfv2-params = { path = ".", editable = true }

[tool.pixi.feature.notebooks.dependencies]
marimo = "*"
plotly = "*"
matplotlib-base = "*"
hvplot = "*"
geoviews = "*"
datashader = "*"
dask = "*"
distributed = "*"
intake = "*"
intake-xarray = "*"
intake-parquet = "*"
s3fs = "*"
ipykernel = "*"

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pre-commit = "*"
ruff = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
notebooks = { features = ["notebooks"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
all = { features = ["notebooks", "dev"], solve-group = "default" }

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["F722"]
