[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfv2-params"
version = "0.1.0"
description = "PRMS/NHM parameter generation from watershed fabric polygons"
requires-python = ">=3.12"
dependencies = [
    "gdptools>=0.3.13",
    "pandas",
    "numpy",
    "geopandas",
    "xarray",
    "rioxarray",
    "rasterstats",
    "spatialpandas",
    "pooch",
    "py7zr",
    "scikit-learn",
    "scipy",
    "pyyaml",
    "tqdm",
    "whitebox",
]

[project.optional-dependencies]
notebooks = [
    "marimo",
    "plotly",
    "matplotlib",
    "hvplot",
    "geoviews",
    "datashader",
    "dask",
    "distributed",
    "intake",
    "intake-xarray",
    "intake-parquet",
    "s3fs",
    "ipykernel",
]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gfv2_params"]

# ---------------------------------------------------------------------------
# Pixi — canonical environment management (issue #39).
#
# Strategy:
#   - [project.dependencies] is the pip-only fallback list (kept so
#     `pip install gfv2-params` still works for non-pixi users via the
#     deprecated environment.yml flow).
#   - [tool.pixi.dependencies] is the canonical conda-forge list. It
#     duplicates the package names from [project.dependencies] for those
#     that have conda counterparts, plus the system / native-binary libs
#     (gdal, rasterio, pyproj, numba, llvmlite, richdem, exactextract)
#     that pip-only installs would silently miss.
#   - [tool.pixi.pypi-dependencies] is intentionally minimal: just the
#     editable install of this project. Anything that *can* come from
#     conda-forge does.
#   - solve-group = "default" on all four environments forces dev/notebooks
#     transitive deps to resolve consistently with production. Slightly
#     over-constrained for our small dep set but avoids drift.
#
# Adding a new dep:
#   - If pure-python and pypi-only: add to [project.dependencies] AND
#     [tool.pixi.pypi-dependencies].
#   - If on conda-forge: add to [project.dependencies] AND
#     [tool.pixi.dependencies]. Re-run `pixi install` to refresh pixi.lock.
#
# Run `pixi install` to materialise envs under `.pixi/envs/`.
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
init-data-root = "python scripts/init_data_root.py"

[tool.pixi.dependencies]
python = "3.12.*"
gdal = "*"
rasterio = "*"
geopandas = "*"
pyproj = "*"
numba = "*"
llvmlite = "*"
richdem = "*"
exactextract = "*"
scipy = "*"
pandas = "*"
numpy = "*"
xarray = "*"
rioxarray = "*"
rasterstats = "*"
spatialpandas = "*"
pooch = "*"
py7zr = "*"
scikit-learn = "*"
pyyaml = "*"
tqdm = "*"
gdptools = ">=0.3.13"
whitebox = "*"

[tool.pixi.pypi-dependencies]
gfv2-params = { path = ".", editable = true }

[tool.pixi.feature.notebooks.dependencies]
marimo = "*"
plotly = "*"
matplotlib-base = "*"
hvplot = "*"
geoviews = "*"
datashader = "*"
dask = "*"
distributed = "*"
intake = "*"
intake-xarray = "*"
intake-parquet = "*"
s3fs = "*"
ipykernel = "*"
nbformat = "*"  # for `marimo export ipynb` round-trip
nbconvert = "*"  # headless notebook execution (scripts/render_figures.py)

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pre-commit = "*"
ruff = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.feature.docs.pypi-dependencies]
# include-markdown plugin pulls README.md / RUNME.md / CLAUDE.md into the
# site without duplicating sources; not on conda-forge as of 2026-05.
mkdocs-include-markdown-plugin = "*"

[tool.pixi.feature.docs.tasks]
# Local dev tasks. Source markdown links to source files (../scripts/foo.py)
# that GitHub renders fine but mkdocs flags as "not found in docs_dir" — those
# warnings are expected and don't break the site. Use docs-build-strict before
# wiring up CI for docs.
"docs-serve" = "mkdocs serve"
"docs-build" = "mkdocs build"
"docs-build-strict" = "mkdocs build --strict"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
notebooks = { features = ["notebooks"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
all = { features = ["notebooks", "dev", "docs"], solve-group = "default" }

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["F722"]
