[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gfv2-params"
version = "0.1.0"
description = "PRMS/NHM parameter generation from watershed fabric polygons"
requires-python = ">=3.12"
dependencies = [
    "gdptools>=0.3.13",
    "pandas",
    "numpy",
    "geopandas",
    "xarray",
    "rioxarray",
    "rasterstats",
    "spatialpandas",
    "pooch",
    "py7zr",
    "scikit-learn",
    "scipy",
    "pyyaml",
    "tqdm",
    "whitebox",
]

[project.optional-dependencies]
notebooks = [
    "marimo",
    "plotly",
    "matplotlib",
    "hvplot",
    "geoviews",
    "datashader",
    "dask",
    "distributed",
    "intake",
    "intake-xarray",
    "intake-parquet",
    "s3fs",
    "ipykernel",
]
dev = [
    "pytest",
    "pre-commit",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gfv2_params"]

[tool.pytest.ini_options]
pythonpath = ["."]

# ---------------------------------------------------------------------------
# Pixi — canonical environment management (issue #39).
#
# Strategy:
#   - [project.dependencies] is the pip-only fallback list (kept so
#     `pip install gfv2-params` still works for non-pixi users via the
#     deprecated environment.yml flow).
#   - [tool.pixi.dependencies] is the canonical conda-forge list. It
#     duplicates the package names from [project.dependencies] for those
#     that have conda counterparts, plus the system / native-binary libs
#     (gdal, rasterio, pyproj, numba, llvmlite, richdem, exactextract)
#     that pip-only installs would silently miss.
#   - [tool.pixi.pypi-dependencies] is intentionally minimal: just the
#     editable install of this project. Anything that *can* come from
#     conda-forge does.
#   - solve-group = "default" on all four environments forces dev/notebooks
#     transitive deps to resolve consistently with production. Slightly
#     over-constrained for our small dep set but avoids drift.
#
# Adding a new dep:
#   - If pure-python and pypi-only: add to [project.dependencies] AND
#     [tool.pixi.pypi-dependencies].
#   - If on conda-forge: add to [project.dependencies] AND
#     [tool.pixi.dependencies]. Re-run `pixi install` to refresh pixi.lock.
#
# Run `pixi install` to materialise envs under `.pixi/envs/`.
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
init-data-root = "python scripts/init_data_root.py"

[tool.pixi.dependencies]
python = "3.12.*"
gdal = "*"
rasterio = "*"
geopandas = "*"
pyproj = "*"
# Bundles PROJ's datum-shift grids locally so proj4-activate.sh sets
# PROJ_NETWORK=OFF; without it PROJ defaults ON and tries to fetch grids from
# cdn.proj.org, which the HPC firewall blocks -> to_crs(4326) returns inf and
# crashes (see scripts/derive_aggregate.py). conda-forge only (no pip equivalent).
proj-data = "*"
numba = "*"
llvmlite = "*"
richdem = "*"
exactextract = "*"
scipy = "*"
pandas = "*"
numpy = "*"
xarray = "*"
rioxarray = "*"
rasterstats = "*"
spatialpandas = "*"
pooch = "*"
py7zr = "*"
scikit-learn = "*"
pyyaml = "*"
tqdm = "*"
gdptools = ">=0.3.13"
whitebox = "*"

[tool.pixi.feature.marp.dependencies]
# Marp slide-deck rendering toolchain (nodejs + marp-cli via npx). Kept in its
# own feature (not dev/notebooks) so pipeline operators don't pay the nodejs +
# chrome download (~250 MB) unless they render presentation decks. Two-step:
#   pixi install -e marp          # nodejs (+ linux chrome system deps below)
#   pixi run -e marp marp-setup   # downloads chrome-headless-shell via puppeteer
# Chromium isn't on conda-forge, so we use puppeteer's chrome-headless-shell
# (smaller, fewer system deps than full chrome — works on bare HPC).
# python is declared here (not inherited) because the env is `no-default-feature`
# (below) to stay light — render_deck.py uses only the stdlib, no geo stack.
python = "3.12.*"
nodejs = ">=20"

[tool.pixi.feature.marp.target.linux-64.dependencies]
# chrome-headless-shell on bare HPC needs libgbm (off-screen buffer alloc, used
# even headless) and alsa-lib (chrome touches the audio subsystem on startup).
libgbm = ">=1.0"
alsa-lib = ">=1.2"

[tool.pixi.feature.marp.target.linux-64.activation.env]
# Chrome is a non-conda binary downloaded by marp-setup with no rpath into the
# pixi env; prepend $CONDA_PREFIX/lib so it finds libgbm + alsa-lib. The
# ${VAR:+:$VAR} guard avoids a trailing ':' (== "search cwd") when unset.
LD_LIBRARY_PATH = "$CONDA_PREFIX/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"

[tool.pixi.feature.marp.tasks]
marp-setup = { cmd = "npx --yes puppeteer browsers install chrome-headless-shell", description = "One-shot: download chrome-headless-shell via puppeteer (works on bare HPC)" }
render-deck = { cmd = "python scripts/render_deck.py", description = "Render a Marp .slides.md deck (PDF/HTML/server) via marp-cli" }

[tool.pixi.pypi-dependencies]
gfv2-params = { path = ".", editable = true }

[tool.pixi.feature.notebooks.dependencies]
marimo = "*"
plotly = "*"
matplotlib-base = "*"
hvplot = "*"
geoviews = "*"
datashader = "*"
dask = "*"
distributed = "*"
intake = "*"
intake-xarray = "*"
intake-parquet = "*"
s3fs = "*"
ipykernel = "*"
nbformat = "*"  # for `marimo export ipynb` round-trip
nbconvert = "*"  # headless notebook execution (scripts/render_figures.py)

[tool.pixi.feature.dev.dependencies]
pytest = "*"
pre-commit = "*"
ruff = "*"
# matplotlib-base is a test-time dep: tests/test_render_snarea_figures.py imports
# scripts/render_snarea_figures.py (matplotlib at module import). Runtime figure
# generation still uses the richer `notebooks` env; dev only needs it to import.
matplotlib-base = "*"

[tool.pixi.feature.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"

[tool.pixi.feature.docs.pypi-dependencies]
# include-markdown plugin pulls README.md / RUNME.md / CLAUDE.md into the
# site without duplicating sources; not on conda-forge as of 2026-05.
mkdocs-include-markdown-plugin = "*"

[tool.pixi.feature.docs.tasks]
# Local dev tasks. Source markdown links to source files (../scripts/foo.py)
# that GitHub renders fine but mkdocs flags as "not found in docs_dir" — those
# warnings are expected and don't break the site. Use docs-build-strict before
# wiring up CI for docs.
"docs-serve" = "mkdocs serve"
"docs-build" = "mkdocs build"
"docs-build-strict" = "mkdocs build --strict"

[tool.pixi.feature.reference.dependencies]
# pywatershed caps python <3.11 (as of 2.0.4), incompatible with the workspace's
# python=3.12.* default feature -> isolated feature (no-default-feature) with its
# own solve-group so it doesn't force-downgrade python for every other environment.
python = "3.10.*"
pywatershed = "*"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
notebooks = { features = ["notebooks"], solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
reference = { features = ["reference"], solve-group = "reference", no-default-feature = true }
# Marp is nodejs + stdlib-python only (chrome pulled post-install by
# `pixi run -e marp marp-setup`); no-default-feature keeps the heavy geo stack
# out so operators only pay ~250 MB when they render decks. Own solve-group.
marp = { features = ["marp"], solve-group = "marp", no-default-feature = true }
all = { features = ["notebooks", "dev", "docs"], solve-group = "default" }

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-ignore = ["F722"]
